# piggy

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  Dockerfile  README.md  docker-compose.pages.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  package.json  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: CD.yml  pages-demo.yml  pages.yml  prettier.yml  requirements-pages.txt  ruff.yml  web_scraper.py
assignments/IM/Programmering/: Oppgave 03 - Gjettelek.md  Oppgave 04 - Hvor gammel er du.md  Oppgave 05 - Ordblandingslek.md
docs/: README.md  api.md  assignment jinja reference.md  reader-audio.md
docs/api-reference/: assignment.md  assignment_folders.md
docs/backend/: README.md  api-and-rendering.md  content-authoring.md  python-reference.md  tooling-deployment.md
docs/frontend/: README.md  css.md  javascript.md  search-and-navigation.md  settings-preferences.md  templates.md  themes.md
overrides/: main.html
overrides/css/: callouts.css  extra.css  footermatter.css  scrollbar.css  slides.css
overrides/partials/: footermatter.html
piggy/: .pages  __init__.py  api.py  app.py  caching.py  devtools.py  exceptions.py  index.md  levering.md  models.py  piggybank.py  reader_audio.py  search.py  tailwind.config.js  thumbnails.py  tts_indexing.py  util.py  utils.py
piggy/data/: language-data.json
piggy/enkel/: eksempeloppgave.md  index.md  js_CtoF.md
piggy/middels/: index.md
piggy/prosjekt/: index.md
piggy/static/: tailwind.css
piggy/static/css/: main.css  snout.css  styles.css  tailwind.input.css
piggy/static/css/animations/: keyframes.css  loader.css
piggy/static/css/base/: elements.css  print.css  print_overrides.css  reset.css  root.css  text-effects.css  utilities.css
piggy/static/css/components/: assignment-grid.css  assignment-meta.css  assignment-page.css  breadcrumbs.css  buttons.css  card-grid.css  error-page.css  information-grid.css  language-selector.css  level-select.css  logo.css  navigation.css  quick-access.css  scroll-to-top.css  search.css  settings-late.css  settings-menu.css
piggy/static/css/fonts/: font-size-themes.css  font-themes.css  imports.css  monospace-themes.css
piggy/static/data/: language-data.json
piggy/static/js/: card_script.js  desert.js  golden.js  main.js  markdown-overrides.js  matrix.js  ocean.js  on-load.js  preferences.js  reader-runtime.js  settings-controls.js  settings-page.js  space.js
piggy/templates/: assignments_root.html  error.html  example.html  index.html  layout.html  oppgave.html  settings.html  topic.html
piggy/templates/assignments/: 0-assignments_root.html  1-year_level.html  2-class_name.html  3-subject.html  4-topic.html  5-assignment.html  _assignments_base.html  tconvert_assignment_base.html
piggy/templates/macros/: include.html
piggy/templates/objects/: card-assignment.html  card-basic.html  card-exercise.html  card-information.html  card-level.html  card-topic.html  card.html
piggy/templates/partials/: common_head.html  head.html  post_scripts.html  search_box.html
piggy/tests/: __init__.py  test_themes.py
piggy/vanskelig/: index.md
tests/: test_piggy_utils.py
tests/test_data/: test_css.css
(+78 files in other folders)
