[project]
name = "piggy"
version = "0.1.0"
description = ""
license = { file = "LICENSE.md" }
readme = "README.md"
dependencies = [
    "flask~=3.0.3",
    "turtleconverter@git+https://github.com/sondregronas/turtleconverter@main",
    "gunicorn~=23.0.0",
    "pillow~=10.4.0",
    "beautifulsoup4~=4.12.3",
    "frozendict==2.4.4",
    "flask-compress==1.15",
    "Flask-Minify==0.48",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "ruff~=0.6.3",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"